calculate video duration

--- a/common/app/views/fragments/atoms/youtube.scala.html
+++ b/common/app/views/fragments/atoms/youtube.scala.html
@@ -15,12 +15,13 @@
             allowfullscreen="">
             </iframe>
 
-            
+
             @media.posterUrl.map { image =>
                 <div class="atom--media--youtube--overlay">
                     <div class="atom--media--youtube--placeholder" style="background-image: url(@image)"></div>
                     <div class="atom--media--youtube--controls">
-                        <div class="atom--media--youtube--play-button"></div>
+                        <div class="atom--media--youtube--play-button">Play Video</div>
+                        <div class="atom--media--youtube--duration"></div>
                     </div>
                 </div>
             }
