--- a/static/src/stylesheets/module/atoms/_youtube.scss
+++ b/static/src/stylesheets/module/atoms/_youtube.scss
@@ -61,72 +61,75 @@
                 @include fade-in;
             }
         }
-
 	}
 
-	.atom--media--youtube--overlay {
-		// pointer-events: none;
+	.atom--media--youtube--placeholder {
+		background-size: cover;
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+	}
 
-		.atom--media--youtube--placeholder {
-			background-size: cover;
-	        background-position: 50% 50%;
-	        background-repeat: no-repeat;
-		}
+	.atom--media--youtube--controls {
+	    cursor: pointer;
+	    position: absolute;
+	    width: 100%;
+	    height: 100%;
+	    box-sizing: border-box;
+	    text-align: center;
 
-		.atom--media--youtube--controls {
-		    cursor: pointer;
-		    position: absolute;
-		    width: 100%;
-		    height: 100%;
-		    box-sizing: border-box;
-		    text-align: center;
+        &:hover {
+            .atom--media--youtube--play-button {
+                transform: translate(-50%, -50%) scale(1.15);
+            }
+        }
 
-            &:hover {
-                .atom--media--youtube--play-button {
-                    transform: translate(-50%, -50%) scale(1.15);
-                }
+        .atom--media--youtube--play-button {
+            // Magic numbers are used here to draw the play arrow and circle as pseudo elements.
+            @include video-play-button-size($vjs-small-button-size);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition: transform 300ms cubic-bezier(.25, .46, .45, .94);
+            user-select: none;
+            overflow: hidden !important;
+            display: inline-block;
+
+            @include mq(mobileLandscape) {
+                @include video-play-button-size($vjs-large-button-size);
             }
 
-            .atom--media--youtube--play-button {
-                // Magic numbers are used here to draw the play arrow and circle as pseudo elements.
+            &:before {
+                @include circular;
                 @include video-play-button-size($vjs-small-button-size);
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                transition: transform 300ms cubic-bezier(.25, .46, .45, .94);
-                user-select: none;
-
+                content: '';
+                display: block;
                 @include mq(mobileLandscape) {
                     @include video-play-button-size($vjs-large-button-size);
                 }
+                background-color: $media-default;
+            }
 
-                &:before {
-                    @include circular;
-                    @include video-play-button-size($vjs-small-button-size);
-                    content: '';
-                    display: block;
-                    @include mq(mobileLandscape) {
-                        @include video-play-button-size($vjs-large-button-size);
-                    }
-                    background-color: $media-default;
-                }
+            &:after {
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-40%, -50%);
+                border-style: solid;
+                border-width: 1em 0 1em 2.4em;
+                border-color: transparent transparent transparent $neutral-1;
 
-                &:after {
-                    content: '';
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-40%, -50%);
-                    border-style: solid;
-                    border-width: 1em 0 1em 2.4em;
-                    border-color: transparent transparent transparent $neutral-1;
-
-                    @include mq(tablet) { // 0 border radius on mobile because stock android has a render bug with it here
-                        border-radius: .2em;
-                    }
+                @include mq(tablet) { // 0 border radius on mobile because stock android has a render bug with it here
+                    border-radius: .2em;
                 }
             }
-		}
+        }
+
+        .atom--media--youtube--duration {
+            position: absolute;
+            left: 4px;
+            bottom: 4px;
+        }
 	}
 }
