White background for front emails

--- a/common/app/views/fragments/email/stylesheets/front.scala.html
+++ b/common/app/views/fragments/email/stylesheets/front.scala.html
@@ -4,7 +4,7 @@
 
 <style>
     body, .body {
-        background: #e5e5e5;
+        background: #ffffff;
     }
 
     .full-width {
@@ -13,7 +13,7 @@
 
     .container,
     .panel {
-        background: #eaeaea;
+        background: #ffffff;
     }
 
     .panel {
