--- a/common/app/views/fragments/immersiveMainMedia.scala.html
+++ b/common/app/views/fragments/immersiveMainMedia.scala.html
@@ -5,6 +5,7 @@
 @import model.ContentPage
 @import views.support.RenderClasses
 @import views.support.TrailCssClasses.toneClass
+@import views.support.Commercial.isPaidContent
 
 @(page: ContentPage)(implicit request: RequestHeader)
 
@@ -12,13 +13,14 @@
     page.item.tags.isTheMinuteArticle,
     page.item.elements.hasMainEmbed,
     page.item.fields.main.nonEmpty,
-    page.item.tags.series.headOption
-)) { case (isTheMinuteArticle, hasEmbed, hasMainMedia, optSeries) =>
-
+    page.item.tags.series.headOption,
+    page.item.tags.isImmersiveAdvertisement
+)) { case (isTheMinuteArticle, hasEmbed, hasMainMedia, optSeries, isAdFeature) =>
     <div class="@RenderClasses(Map(
             "content--minute-article" -> isTheMinuteArticle,
             "content--immersive-article-without-main-media" -> !hasMainMedia,
-            "immersive-main-media" -> hasMainMedia
+            "immersive-main-media" -> hasMainMedia,
+            "immersive-main-media__advertisment" -> isAdFeature
         ),
         "content", "content--immersive", "content--immersive-article", "tonal", s"tonal--${toneClass(page.item)}")
     ">
@@ -42,7 +44,6 @@
             }
 
         </div>
-
         <div class="immersive-main-media__media">
             @if(page.item.elements.hasMainPicture) {
                 @page.item.elements.mainPicture.map(_.images).orElse(page.item.trail.trailPicture).map { picture =>
@@ -83,7 +84,8 @@
 
                 <h1 class="@RenderClasses(Map(
                         "content__headline--minute" -> isTheMinuteArticle,
-                        "content__headline--immersive--with-main-media" -> hasMainMedia
+                        "content__headline--immersive--with-main-media" -> hasMainMedia,
+                        "content__headline--advertisement" -> isAdFeature
                     ), "content__headline", "content__headline--immersive", "content__headline--immersive-article")
                 ">
                     @if(isTheMinuteArticle) {
