--- a/facia/app/views/fragments/emailFrontBody.scala.html
+++ b/facia/app/views/fragments/emailFrontBody.scala.html
@@ -1,6 +1,8 @@
 @import layout.{FaciaCard, FaciaCardHeader}
 @import model.pressed.PressedContent
 @import layout.EditionalisedLink
+@import model.EmailAddons.EmailContentType
+
 @(page: model.PressedPage)(implicit request: RequestHeader)
 
 @import conf.Static
@@ -69,7 +71,7 @@
 }
 
 @fullRow {
-    <img width="580" class="full-width" src="@Static("images/email/banners/generic.png")">
+    @img(src = page.banner, alt = page.email.map(_.name))
 }
 
 @page.frontProperties.onPageDescription.map { description =>
