Use the right onward container in hosted article

--- a/commercial/app/views/hosted/guardianAmpHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianAmpHostedArticle.scala.html
@@ -64,13 +64,7 @@
 
                                 </div>
                                 <div class="hide-on-desktop">
-                                @if(page.nextPages.nonEmpty) {
-                                    @hostedOnwardJourney(page.nextPages.map { nextPage =>
-                                        makeshiftPage(nextPage, page.campaign)
-                                    }, 2, 4)
-                                } else {
-                                    <div class="js-onward-placeholder"></div>
-                                }
+                                    @hostedOnwardAmp(s"${page.url}/article/onward.json")
                                 </div>
                                 <div class="hosted__standfirst">
                                     <div class="hosted__terms">​Hosted content is used to describe content that is paid for and supplied by the advertiser.
