--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -89,7 +89,7 @@
                         <div class="hosted__meta">
                             <h1 class="hosted__heading">@{page.video.title}</h1>
                         </div>
-                        <div class="hostedbadge hostedbadge--shouldscale">
+                        <div class="hostedbadge">
                             <a href="@page.cta.url" data-link-name="hosted-logo-top-left" target="_blank">
                                 <img class="hostedbadge__logo" src="@{page.campaign.logo.url}" alt="logo @{page.campaign.owner}">
                             </a>
