--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -1,4 +1,3 @@
-
 .hosted-article-page {
     .media-primary.media-primary--showcase {
         position: relative;
@@ -21,6 +20,9 @@
         .gs-container {
             height: 100%;
         }
+    }
+    article.content--article {
+        background: #ffffff;
     }
     .title {
         @include fs-textSans(4);
@@ -167,33 +169,30 @@
         }
     }
 
-    .hide-on-desktop {
-        .hosted__next-page {
-            margin: 30px 0 20px;
+    .hosted__onward-journey {
+        position: relative;
+        margin-top: $gs-baseline;
+
+        @include mq(tablet, desktop) {
+            margin-right: gs-span(1) + $gs-gutter;
+        }
+    }
+
+    @include mq(leftCol) {
+        .gs-container {
             position: relative;
         }
-        .hosted__next-page--header {
-            margin: 0;
+        .hosted-article__main-column {
+            position: static;
         }
-        .hosted__next-page--tile {
-            margin: 10px 0;
-        }
-    }
-    .content__secondary-column {
-        .hosted__next-page {
-            width: auto;
+        .hosted__onward-journey {
+            width: 300px;
             position: absolute;
-            margin: 70px 0;
-            top: 0;
-            right: 0;
-            left: #{2 * $gs-gutter};
-            .hosted__next-page--header,
-            .hosted__next-page--tile {
-                margin-right: 0;
-                margin-top: 0;
-            }
+            top: 58px;
+            right: $gs-gutter;
         }
     }
+
     .from-content-api {
         ul > li:before {
             border-radius: 0;
@@ -237,16 +236,11 @@
     margin-bottom: 10px;
 }
 
-.hosted__next-page .hosted__next-page--header {
-    border: 0;
-    padding: 0;
-}
-
 /* Hosted More From Carousel AB test */
 .hosted__next-page__carousel-arrows {
     position: absolute;
     right: 0;
-    top: 24px;
+    top: 16px;
 
     .inline-icon {
         display: inline-block;
@@ -378,7 +372,7 @@
         background: rgba(255, 255, 255, .9);
     }
 
-    &:hover .hosted-next-page__wrapper  {
+    &:hover .hosted-next-page__wrapper {
         background: rgba(255, 255, 255, .8);
     }
 }
