--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -838,6 +838,7 @@ $hosted-video-height: 540px;
     margin-left: 10px;
     color: #ffffff;
     border: 0;
+    padding-top: 2px;
 
     @include mq(mobile) {
         margin-top: 20px;
