First batch of i icon replacements

--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -117,10 +117,9 @@
             color: $neutral-2;
 
             &:before {
-                @include icon(image);
+                @include icon(information-circle-grey);
                 content: '';
                 vertical-align: top;
-                margin-top: 1px;
             }
         }
 
