--- a/common/app/views/fragments/atoms/youtube.scala.html
+++ b/common/app/views/fragments/atoms/youtube.scala.html
@@ -21,7 +21,18 @@
                     <div class="atom--media--youtube--placeholder" style="background-image: url(@image)"></div>
                     <div class="atom--media--youtube--controls">
                         <div class="atom--media--youtube--play-button">Play Video</div>
-                        <div class="atom--media--youtube--duration"></div>
+
+                        <div class="atom--media--youtube--control-bar">
+
+                            <div class="atom--media--youtube--control-bar--content">
+                                <div class="atom--media--youtube--control-bar--icon">
+                                    @fragments.inlineSvg("video-icon", "icon")
+                                </div>
+                                <div class="atom--media--youtube--control-bar--duration">
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             }
