--- a/static/src/stylesheets/module/email/_iframe.scss
+++ b/static/src/stylesheets/module/email/_iframe.scss
@@ -142,6 +142,21 @@ body {
         }
     }
 
+    .email-sub--plaintone {
+       .email-sub__text-input {
+           border: thin solid;
+           border-radius: 1000px;
+           float: left;
+           width: 70%;
+       }
+
+       .email-sub__submit-input {
+           border: thin solid;
+           border-radius: 1000px;
+           width: 25%;
+           margin: 0rem 0rem 0.75rem 3%;
+       }
+   }
 }
 
 /**
