--- a/static/src/stylesheets/amp/_header.scss
+++ b/static/src/stylesheets/amp/_header.scss
@@ -1,108 +1,89 @@
 .main-header {
-    background: #005689;
+    background: $guardian-brand;
     position: relative;
-    height: 52px;
-}
+    height: 68px;
 
-.main-header .logo-wrapper {
-    position: absolute;
-    right: 20px;
-    padding-top: 3px;
-    width: inherit;
-    text-align: right;
-}
+    @include mq($until: 390px) {
+        height: 63px;
+    }
 
-.inline-logo{
-    display: block;
-}
+    @include mq($until: 360px) {
+        height: 57px;
+    }
 
-.main-header .logo-wrapper svg {
-    width: 190px;
-    height: 36px;
-}
+    .logo-wrapper {
+        position: absolute;
+        right: $gs-gutter;
+        padding-top: $gs-baseline/3;
+        width: inherit;
+        text-align: right;
 
-@media (max-width: 480px) {
-    .main-header .logo-wrapper {
-        right: 10px;
+        @include mq($until: mobileLandscape) {
+            right: $gs-gutter/2;
+        }
+
+        svg {
+            width: 190px;
+            height: $gs-row-height;
+
+            @include mq($until: 390px) {
+                width: 170px;
+                height: 32px;
+            }
+
+            @include mq($until: 360px) {
+                width: 160px;
+                height: 30px;
+            }
+
+            @include mq($until: 340px) {
+                width: 140px;
+                height: 27px;
+            }
+        }
     }
 }
-
-//@* Kicker style nav *@
- .main-header {
-     height: 68px;
- }
 
 .main-navigation {
     position: absolute;
-    top: 5px;
-    left: 20px;
+    top: $gs-baseline/2;
+    left: $gs-gutter;
     line-height: 1.1;
-}
 
-.main-navigation .main-navigation_link {
-    display: inline;
-    font-family: "Guardian Egyptian Web",Georgia,serif;
-    font-size: 22px;
-}
-
-.main-navigation .main-navigation_link a {
-    font-weight: 400;
-    color: #aad8f1;
-    display: inline-block;
-}
-
-.main-navigation .main-navigation_link::after {
-    content: "/";
-    color: rgba(255,255,255,0.3);
-}
-
-.main-navigation .main-navigation_link:last-of-type::after {
-    content:none;
-}
-
-.main-navigation .main-navigation_link:nth-child(2)::after {
-    content: "\A";
-    white-space: pre;
-}
-
-@media (max-width: 480px) {
-    .main-navigation {
-        left: 10px;
+    @include mq($until: mobileLandscape) {
+        left: $gs-gutter/2;
     }
-}
 
-@media (max-width: 390px) {
-    .main-navigation .main-navigation_link{
-        font-size: 20px;
-    }
-    .main-header .logo-wrapper svg {
-        width: 170px;
-        height: 32px;
-    }
-    .main-header {
-        height: 63px;
-    }
-}
+    .main-navigation_link {
+        display: inline;
+        font-size: 22px;
 
-@media (max-width: 360px) {
-    .main-navigation .main-navigation_link{
-        font-size: 18px;
-    }
-    .main-header .logo-wrapper svg {
-        width: 160px;
-        height: 30px;
-    }
-    .main-header {
-        height: 57px;
-    }
-    .main-navigation {
-        top: 6px;
-    }
-}
+        @include mq($until: 390px) {
+            font-size: 20px;
+        }
 
-@media (max-width: 340px) {
-    .main-header .logo-wrapper svg {
-        width: 140px;
-        height: 27px;
+        @include mq($until: 360px) {
+            font-size: 18px;
+        }
+
+        a {
+            font-weight: 400;
+            color: $news-support-1;
+            display: inline-block;
+        }
+
+        &::after {
+            content: "/";
+            color: rgba(255,255,255,0.3);
+        }
+
+        &:last-of-type::after {
+            content:none;
+        }
+
+        &:nth-child(2)::after {
+            content: "\A";
+            white-space: pre;
+        }
     }
 }
