Info icon in lightbox updated

--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -120,6 +120,7 @@
                 @include icon(information-circle-grey);
                 content: '';
                 vertical-align: top;
+                margin-right: $gs-gutter/5;
             }
         }
 
