Make plaindark form styling css only, no routing required

--- a/common/app/views/fragments/email/signup/emailSignUp.scala.html
+++ b/common/app/views/fragments/email/signup/emailSignUp.scala.html
@@ -11,10 +11,14 @@
 
 @listIdTones = @{ Map[Int, String] (
     theBestOfOpinion -> "comment",
+    bestOfOpinionAUS -> "comment",
+    bestOfOpinionUS -> "comment",
     theFiver -> "feature",
     mediaBriefing -> "media",
     theLongRead -> "feature",
     weekendReading -> "feature",
+    documentaries -> "plaindark",
+    theFlyer -> "feature",
     theBreakdown -> "feature",
     theSpin -> "feature",
     closeUp -> "review",
