Removes all instances of isDev from the scala templates

--- a/commercial/app/views/hosted/guardianAmpHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianAmpHostedVideo.scala.html
@@ -6,7 +6,7 @@
 @import views.support.FBPixel
 @import conf.Configuration.environment
 @import conf.Configuration.site.host
-@(page: HostedVideoPage)(implicit request: RequestHeader)
+@(page: HostedVideoPage)(implicit request: RequestHeader, env: play.api.Environment)
 
 <!doctype html>
 <html AMP>
