Remove finished AB test - and reorganise related code a bit

--- a/static/src/stylesheets/module/commercial/glabs/_hosted-video.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-video.scss
@@ -41,15 +41,15 @@
         order: 3;
         overflow: hidden;
         @include mq($until: leftCol) {
-            margin: $gs-gutter 0 0;
-            padding: 0 $gs-gutter $gs-baseline/2;
+            margin: $gs-baseline 0 0;
+            padding: 0 $gs-gutter;
             background-color: $neutral-7;
-            .hosted__next-page__carousel-arrows {
-                right: $gs-gutter;
-            }
             .hosted__next-page-header--border {
                 margin-left: -$gs-gutter;
                 width: 150%;
+            }
+            .hosted__carousel-marker {
+                margin-bottom: $gs-baseline/2;
             }
         }
         @include mq(leftCol) {
