--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -889,6 +889,7 @@ $hosted-video-height: 551px;
 
 .hosted__next-page--header {
     margin-bottom: 10px;
+    position: relative;
 }
 
 .hosted__container .host__body {
