--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -236,11 +236,10 @@
     margin-bottom: 10px;
 }
 
-/* Hosted More From Carousel AB test */
 .hosted__next-page__carousel-arrows {
     position: absolute;
     right: 0;
-    top: 16px;
+    top: 19px;
 
     .inline-icon {
         display: inline-block;
@@ -258,9 +257,17 @@
         -ms-transform: rotate(180deg);
         transform: rotate(180deg);
     }
+
+    .prev-oj-item {
+        opacity: .5;
+    }
 }
 
 .hosted__next-page__carousel-wrapper {
+    overflow: hidden;
+}
+
+.hosted__next-page__carousel-pages {
     position: relative;
     transform: translate(0, 0);
     transition: transform 1s ease;
@@ -276,121 +283,10 @@
     }
 }
 
-.hosted__ab-test-variant-carousel {
-    overflow: hidden;
-    .prev-oj-item {
-        opacity: .5;
-    }
-}
-
-.hosted__ab-test-variant-popup {
-    .hosted__see-all-onward {
-        cursor: pointer;
-        border-radius: 100px;
-        padding: 0 $gs-gutter;
-        position: absolute;
-        top: 20px;
-        right: 0;
-    }
-}
-
-.hosted__more-from-overlay.survey-overlay-simple {
-    z-index: $zindex-ads;
-    position: absolute;
-    height: auto;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, .9);
-    svg {
-        fill: #ffffff;
-    }
-}
-
-.hosted__more-from-title {
-    @include f-headlineSans;
-    margin: 30px 100px $gs-baseline 120px;
-
-    .hosted__text {
-        color: #ffffff;
-    }
-
-    h2 {
-        font-size: 20px;
-        line-height: 20px;
-        @include mq(desktop) {
-            font-size: 30px;
-            line-height: 30px;
-        }
-    }
-
-    @include mq(desktop) {
-        margin: 40px 100px #{2 * $gs-baseline} 180px;
-    }
-}
-
-.hosted__more-from-overlay button.hosted__more-from-overlay-close {
-    padding-top: 3px;
-    outline: none;
-    border-radius: 100px;
-    border: 1px solid #ffffff;
-    position: absolute;
-    top: $gs-baseline;
-    right: $gs-gutter;
-
-    .button-text {
-        color: #ffffff;
-        position: absolute;
-        right: 50px;
-        opacity: .5;
-        font-size: 16px;
-    }
-}
-
-.hosted__more-from-popup {
-    width: 100%;
-}
-
-.hosted__next-page-tile--popup {
-    display: inline-block;
-    width: calc(100% - #{2 * $gs-gutter});
-    margin: $gs-baseline 0 0 $gs-gutter;
-    background: #ffffff;
-    vertical-align: top;
-    position: relative;
-    &:hover {
-        text-decoration: none;
-    }
-
-    @include mq(tablet) {
-        max-width: gs-span(3);
-    }
-
-    @include mq(leftCol) {
-        max-width: gs-span(4);
-    }
-
-    .hosted-next-page__wrapper {
-        background: rgba(255, 255, 255, .9);
-    }
-
-    &:hover .hosted-next-page__wrapper {
-        background: rgba(255, 255, 255, .8);
-    }
-}
-
-.hosted__next-page-thumb--popup {
-    width: 100%;
-}
-
-.hosted__next-page-title--popup {
-    @include f-headlineSans;
-    color: $neutral-1;
-    padding: 8px 8px 16px;
-    margin: 0;
-    min-height: 48px;
-}
-
 .hosted__carousel-marker {
     text-align: center;
+    margin-top: -5px;
+    margin-bottom: -5px;
 }
 
 $dotSize: 8px;
@@ -406,16 +302,4 @@ $dotSize: 8px;
     &:not(.highlighted) {
         background: transparent;
     }
-}
-
-.hosted-page.ab-test-variant-carousel .hosted__ab-test-control,
-.hosted-page.ab-test-variant-popup .hosted__ab-test-control,
-.hosted__ab-test-variant-carousel,
-.hosted__ab-test-variant-popup {
-    display: none;
-}
-
-.hosted-page.ab-test-variant-carousel .hosted__ab-test-variant-carousel,
-.hosted-page.ab-test-variant-popup .hosted__ab-test-variant-popup {
-    display: block;
 }
