Added fullscreen icon on interaction

--- a/applications/app/views/fragments/galleryBody.scala.html
+++ b/applications/app/views/fragments/galleryBody.scala.html
@@ -83,6 +83,7 @@
                         GalleryMedia.inline,
                         image.altText.getOrElse("")
                     )
+                    @fragments.inlineSvg("expand-image", "icon", List("centered-icon", "rounded-icon", "gallery__fullscreen", "modern-visible", "hide-until-tablet"))
                 </a>
             }
         </figure>
