Time After Time - removing usages of rem

--- a/static/src/stylesheets/module/email/_iframe.scss
+++ b/static/src/stylesheets/module/email/_iframe.scss
@@ -154,7 +154,7 @@ body {
            border: thin solid;
            border-radius: 1000px;
            width: 25%;
-           margin: 0rem 0rem 0.75rem 3%;
+           margin: 0 0 0 3%;
        }
    }
 }
