--- a/static/src/stylesheets/module/external/_from-content-api.scss
+++ b/static/src/stylesheets/module/external/_from-content-api.scss
@@ -169,27 +169,22 @@
     color: $neutral-2;
 
     .inline-information {
-        position: relative;
-        display: inline-block;
-        margin-right: $gs-gutter/5;
-        margin-bottom: -$gs-baseline/6;
+        margin-right: $gs-gutter/10;
+        margin-top: -$gs-baseline/4;
         width: 14px;
         height: 14px;
-        border-radius: 50%;
         background-color: $neutral-2;
 
         svg {
             width: 4px;
             fill: #ffffff;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            margin: auto;
 
             .tonal--tone-media & {
                 fill: $multimedia-support-5;
+            }
+
+            .content__main--minute-article & {
+                fill: $neutral-5;
             }
         }
     }
