--- a/commercial/app/views/hosted/guardianAmpHostedGallery.scala.html
+++ b/commercial/app/views/hosted/guardianAmpHostedGallery.scala.html
@@ -48,7 +48,7 @@
             @guardianHostedHeader(if(page.campaign.fontColour.isDark) "hosted-gallery-page hosted-page--bright" else "hosted-gallery-page", page, isAMP = true)
             <div class="hosted-page hosted-gallery-page--container hosted-gallery-page @if(page.campaign.fontColour.isDark) {hosted-page--bright}">
 
-                <amp-carousel width="500" height="300"
+                <amp-carousel width="500" height="300" class="hosted-gallery__amp-carousel"
                 layout="responsive"
                 type="slides">
                     @for(i <- page.images.indices) {
