Inlined centered-icon style

--- a/static/src/stylesheets/module/external/_from-content-api.scss
+++ b/static/src/stylesheets/module/external/_from-content-api.scss
@@ -175,7 +175,7 @@
         height: 14px;
         background-color: $neutral-2;
 
-        svg {
+        .inline-information__svg {
             width: 4px;
             fill: #ffffff;
 
