--- a/static/src/stylesheets/head.content.scss
+++ b/static/src/stylesheets/head.content.scss
@@ -7,6 +7,7 @@
    ========================================================================== */
 @import 'icons/_global-icons-svg';
 @import 'icons/video-icons-svg';
+@import 'module/_icons.head';
 
 /* ==========================================================================
    Global modules
