Hosted AMP pages - improve sassiness

--- a/commercial/app/views/hosted/guardianAmpHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianAmpHostedArticle.scala.html
@@ -68,7 +68,7 @@
                                     </div>
                                 </div>
                             </div>
-                            @hostedOnwardAmp(s"${page.url}/article/onward.json", 148)
+                            @hostedOnwardAmp(s"${page.url}/article/onward.json")
                         </div>
                     </div>
                 </article>
