--- a/commercial/app/views/hosted/guardianAmpHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianAmpHostedVideo.scala.html
@@ -81,7 +81,7 @@
                     @guardianHostedShareButtons(page)
                 </div>
             </header>
-            @hostedOnwardAmp(s"${page.url}/video/onward.json", 100)
+            @hostedOnwardAmp(s"${page.url}/video/onward.json")
         </section>
         @guardianHostedCta(page, page.cta, isAMP = true)
       </div>
